--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
     "postcss": "^8",
+    "react-icons": "^5.0.1",
     "sass": "^1.71.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
